Closed Bug 1568028 Opened 6 years ago Closed 6 years ago

[wfh] about:support doesn't report/show separate socket process in "Remote Processes" section

Categories

(Core :: Networking, defect, P2)

66 Branch
x86_64
All
defect

Tracking

()

VERIFIED FIXED
mozilla77
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- disabled
firefox68 --- disabled
firefox69 --- disabled
firefox70 --- wontfix
firefox73 --- wontfix
firefox74 --- wontfix
firefox75 --- wontfix
firefox76 --- wontfix
firefox77 --- verified

People

(Reporter: Virtual, Assigned: kershaw)

References

Details

(Keywords: enterprise, nightly-community, reproducible, Whiteboard: [necko-triaged])

Attachments

(2 files)

Bug #1513057 implanted separate socket process controlled by "network.process.enabled" preference in about:config, and bug #1555792 set "network.process.enabled" preference by default to "true", as well as "media.peerconnection.mtransport_process" for running media transport in separate process.

STR:

  1. Open about:support
    and see that it doesn't report/show separate socket process in "Remote Processes" section.
Has Regression Range: --- → irrelevant
Has STR: --- → yes

I don't see RDD, or GPU, or GMP in there either.

In my case, I have GPU process included in "Remote Processes" section in about:support.

This is how it looks on my end:

Remote Processes

Type: Web Content
Count: 8 / 8

Type: Privileged About
Count: 1

Type: Extension
Count: 1

Type: GPU
Count: 1

Kershaw, can you please have a look at it?

Flags: needinfo?(kershaw)
Assignee: nobody → kershaw
Flags: needinfo?(kershaw)
Priority: -- → P2
Whiteboard: [necko-triaged]

This might be helpful for QA; they need to be able to verify whether the socket process is active or not.

This issue is also present on Mac OS, along with Windows 7.
It is not reproducing in Windows 10 and Ubuntu 18.

(In reply to Bodea Daniel [:danibodea] from comment #5)

This issue is also present on Mac OS, along with Windows 7.
It is not reproducing in Windows 10 and Ubuntu 18.

Are you sure that Windows 10 and Ubuntu 18 shows socket process as separate process under "Remote Processes" section in about:support?

Flags: needinfo?(daniel.bodea)

I assumed that the GPU is what I should see under Remote Processes, considering that that's the difference I saw between these OSes. Please clarify what I should see when to confirm a separate process is displayed on about:support. Thank you.

Flags: needinfo?(daniel.bodea) → needinfo?(Virtual)

You should see "Socket" process, but you won't see it, as it not yet implanted there to see.

Flags: needinfo?(Virtual)

Then it reproduces on all OS types. Thank you.

OS: Windows 7 → All
Version: 66 Branch → Trunk
Summary: about:support doesn't report/show separate socket process in "Remote Processes" section → [wfh] about:support doesn't report/show separate socket process in "Remote Processes" section
Whiteboard: [necko-triaged] → [necko-triaged][wfh]
Pushed by kjang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7ca34206d5cb Show socket process in about:support r=fluent-reviewers,mconley
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77

The "Socket" appears with value 1 in about:support, bug when attempting to disable it by adding the "MOZ_DISABLE_SOCKET_PROCESS_SANDBOX" with value 1 to System variables, the "Socket" is still displayed with value 1 in about:support.
Am I disabling it correctly?

How do I disable the socket process in Linux and Mac?
Thanks.

Flags: needinfo?(kershaw)

(In reply to Bodea Daniel [:danibodea] from comment #13)

Created attachment 9138713 [details]
socket process in about support.png

The "Socket" appears with value 1 in about:support, bug when attempting to disable it by adding the "MOZ_DISABLE_SOCKET_PROCESS_SANDBOX" with value 1 to System variables, the "Socket" is still displayed with value 1 in about:support.
Am I disabling it correctly?

How do I disable the socket process in Linux and Mac?
Thanks.

MOZ_DISABLE_SOCKET_PROCESS_SANDBOX is for disabling the sandboxing of socket process. To disable the socket process, just set the pref network.process.enabled to false.

Flags: needinfo?(kershaw)

I'm confirming that bug is fixed, starting in Mozilla Firefox Nightly 77.0a1 (2020-04-06), so I'm marking this bug as VERIFIED.
Thank you very much! \o/

Keywords: enterprise
Whiteboard: [necko-triaged][wfh] → [necko-triaged]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: