Bug 1568028 - Show socket process in about:support r=fluent-reviewers,mconley

Differential Revision: https://phabricator.services.mozilla.com/D69258

--HG--
extra : moz-landing-system : lando